projetGL/src/test/deca/extension/context/invalid/invalid_01.deca
//Description:type de tableau non conforme au type declaré(boolean-->int)

{
    int x;
    int tab1[]=[1,2,3,4,5];
    boolean tab2[][]=new int[][];
    x=tab[0]+tab[1];
}